initial update to paper with general outline and some thoughts for discussion, etc...

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -169,7 +169,8 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 - Nonlinear GSM for robot team 
     - discuss identification of rhodamine plume and easy abundance mapping via the embedding coordinate
     - discuss intrinsic dimensionality identification via abundance sparsity and BIC
-    - Discuss identification of non-linearity \textit{strenghth} via 
+    - Discuss identification of non-linearity \textit{strength} via regularization parameter and BIC.
+    - reconstruction rmse can also be used to evaluate the relative performance for fixed model size (i.e. k and m) with varying regularization strength
 
 - Discuss  extensions to the GSM
     - batch training as outlined in Bishop paper, extensions to noise model to allow adaptive uncertainty for each wavelength bin
@@ -194,7 +195,7 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 }
 
 
-\funding{Please add: ``This research received no external funding'' or ``This research was funded by NAME OF FUNDER grant number XXX.'' and  and ``The APC was funded by XXX''. Check carefully that the details given are accurate and use the standard spelling of funding agency names at \url{https://search.crossref.org/funding}, any errors may affect your future funding.}
+\funding{\textcolor{red}{Please add: ``This research received no external funding'' or ``This research was funded by NAME OF FUNDER grant number XXX.'' and  and ``The APC was funded by XXX''. Check carefully that the details given are accurate and use the standard spelling of funding agency names at \url{https://search.crossref.org/funding}, any errors may affect your future funding.}}
 
 
 \institutionalreview{Not applicable.}
@@ -202,10 +203,10 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 \informedconsent{Not applicable.}
 
 
-\dataavailability{We encourage all authors of articles published in MDPI journals to share their research data. In this section, please provide details regarding where data supporting reported results can be found, including links to publicly archived datasets analyzed or generated during the study. Where no new data were created, or where data is unavailable due to privacy or ethical restrictions, a statement is still required. Suggested Data Availability Statements are available in section ``MDPI Research Data Policies'' at \url{https://www.mdpi.com/ethics}.} 
+\dataavailability{\textcolor{red}{We encourage all authors of articles published in MDPI journals to share their research data. In this section, please provide details regarding where data supporting reported results can be found, including links to publicly archived datasets analyzed or generated during the study. Where no new data were created, or where data is unavailable due to privacy or ethical restrictions, a statement is still required. Suggested Data Availability Statements are available in section ``MDPI Research Data Policies'' at \url{https://www.mdpi.com/ethics}.}}
 
 
-\acknowledgments{In this section you can acknowledge any support given which is not covered by the author contribution or funding sections. This may include administrative and technical support, or donations in kind (e.g., materials used for experiments).}
+\acknowledgments{\textcolor{red}{In this section you can acknowledge any support given which is not covered by the author contribution or funding sections. This may include administrative and technical support, or donations in kind (e.g., materials used for experiments).}}
 
 \conflictsofinterest{The authors declare no conflicts of interest.}
  
