some more minor changes

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -177,7 +177,7 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 
 - Discuss other applications of the GSM
     - Optimal route planning for in-situ data collection based on prize-collecting travelling salesman problem, i.e. construct a route which maximizies area traversed in GSM latent space (e.g. the n-simplex). 
-    - Applications to source apportionment, e.g. linear GSM can be used for standard source apportionment problems 
+    - Applications to source apportionment, e.g. linear GSM can be used for standard source apportionment problems (no reactions) and nonlinear GSM may be useful for modeling scenarios with aditional complications due to reactions and transfport from source to receptor.
 
 \section{Conclusions}
 
