updated to fit parameter sweep for robot team dye data

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -150,7 +150,7 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 - describe evaluation criteria
 
 \subsection{Nonlinear Mixing: Water Contaminant Identification}
-- describe robot team data collection & processing
+- describe robot team data collection and processing
 - describe 
 
 \section{Results}
