--- a/paper/references.bib
+++ b/paper/references.bib
@@ -33,6 +33,16 @@
   publisher={Elsevier}
 }
 
+@article{parallel-gtm,
+  title={Parallel generative topographic mapping: an efficient approach for big data handling},
+  author={Lin, Arkadii and Baskin, Igor I and Marcou, Gilles and Horvath, Dragos and Beck, Bernd and Varnek, Alexandre},
+  journal={Molecular Informatics},
+  volume={39},
+  number={12},
+  pages={2000009},
+  year={2020},
+  publisher={Wiley Online Library}
+}
 
 % NMF
 
