adding more to discussion section

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -183,6 +183,8 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
     \end{equation}
     where there are $r$ individual GTM models with mixing coefficients $P(r)$ such that $\sum_r P(r) =1$
 
+- Other potential extensions to GSM model
+     - Adapt latent space  to allow for points whose barycentric coordinates sum to less than 1 in order to account for lighting effects (shouldn't matter for reflectance but would matter for radiance depending on incident light). This is the $\gamma$ factor that shows up in some of the mixing papers.
 
 - Discuss other applications of the GSM
     - Optimal route planning for in-situ data collection based on prize-collecting travelling salesman problem, i.e. construct a route which maximizies area traversed in GSM latent space (e.g. the n-simplex). 
