Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -184,6 +184,13 @@ Penalized complete-data log likelihood
 - multiplicative updated to guarantee non-negativity (Generalized EM procedure)
 - sum-to-one constraint is guaranteed via representation of latent space with barycentric coordinates.
 
+
+\begin{figure}[H]
+\includegraphics[width=\columnwidth]{figures/methods/gsm-diagram.png}
+\caption{ \label{fig:gsm-diagram}}
+\end{figure}  
+
+
 \subsection{Implementation Details}
 
 The mixing coefficients are initially chosen so that $\pi_k = \frac{1}{K}$.
