Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -186,7 +186,7 @@ Penalized complete-data log likelihood
 
 
 \begin{figure}[H]
-\includegraphics[width=\columnwidth]{paper/figures/methods/gsm/gsm-diagram.png}
+\includegraphics[width=\columnwidth]{paper/figures/methods/gsm/gsm-diagram.pdf}
 \caption{Illustration of the GSM. Points in the latent space (green dots) are uniformly distributed at the nodes of a regular grid on the n-simplex whose barycentric coordinates are to be interpreted as the relative abundance of n-many unique sources $z_1, ... z_{N_v}$. Here, $N_v=3$ has been chosen for illustrative purposes. These nodes are mapped into (spectral) data space via the mapping $\psi(z)$ utilizing $M$-many radially symmetric basis functions shown in red. The trained GSM also enables modelling of spectral variability via the precision parameter $\beta$ shown here as a light blue band around the estimated spectra in the data space.\label{fig:gsm-diagram}}
 \end{figure}  
 
