--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -208,12 +208,29 @@ The mixing coefficients are initially chosen so that $\pi_k = \frac{1}{K}$.
 - describe NMF method (for comparisson)
 - describe evaluation criteria
 
+
+\begin{figure}[H]
+\includegraphics[width=0.85\columnwidth]{paper/figures/results-usgs/fit-comparison.pdf}
+\caption{Comparison of GSM against NMF on simulated USGS dataset. \label{fig:usgs-fits}}
+\end{figure}  
+
+
+
+
 \subsection{Nonlinear Mixing: Water Contaminant Identification}
 - describe robot team data collection and processing
 - describe 
 
 \section{Results}
 \subsection{Linear Mixing}
+
+\begin{figure}[H]
+\includegraphics[width=0.85\columnwidth]{paper/figures/results-usgs/fit-comparison.pdf}
+\caption{Comparison of GSM against NMF on simulated USGS dataset. \label{fig:usgs-fits}}
+\end{figure}  
+
+
+
 \subsection{Nonlinear Mixing: Rhodamine Dye Plume}
 \subsection{Nonlinear Mixing: Semi-supervised Analysis}
 
