Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -210,8 +210,8 @@ The mixing coefficients are initially chosen so that $\pi_k = \frac{1}{K}$.
 
 
 \begin{figure}[H]
-\includegraphics[width=0.85\columnwidth]{paper/figures/results-usgs/fit-comparison.pdf}
-\caption{Comparison of GSM against NMF on simulated USGS dataset. \label{fig:usgs-fits}}
+\includegraphics[width=\columnwidth]{paper/figures/methods/usgs/usgs-dataset.pdf}
+\caption{Synthetic dataset from USGS spectra. \label{fig:usgs-data}}
 \end{figure}  
 
 
