Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -221,6 +221,15 @@ The mixing coefficients are initially chosen so that $\pi_k = \frac{1}{K}$.
 - describe robot team data collection and processing
 - describe 
 
+
+
+\begin{figure}[H]
+\includegraphics[width=\columnwidth]{paper/figures/methods/robot-team/robot-team-overview.pdf}
+\caption{Robot team dataset. \label{fig:robotteam-data}}
+\end{figure}  
+
+
+
 \section{Results}
 \subsection{Linear Mixing}
 
