Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -234,14 +234,26 @@ The mixing coefficients are initially chosen so that $\pi_k = \frac{1}{K}$.
 \subsection{Linear Mixing}
 
 \begin{figure}[H]
-\includegraphics[width=0.85\columnwidth]{paper/figures/results-usgs/fit-comparison.pdf}
+\includegraphics[width=0.85\columnwidth]{paper/figures/results/usgs/fit-comparison.pdf}
 \caption{Comparison of GSM against NMF on simulated USGS dataset. \label{fig:usgs-fits}}
 \end{figure}  
 
 
+\begin{figure}[H]
+\includegraphics[width=\columnwidth]{paper/figures/results/usgs/extracted-endmembers.png}
+\caption{Endmembers extracted using GSM for simulated USGS dataset with SNR$=20$. \label{fig:usgs-endmembers}}
+\end{figure}  
+
 
 \subsection{Nonlinear Mixing: Rhodamine Dye Plume}
-\subsection{Nonlinear Mixing: Semi-supervised Analysis}
+
+Exploratory data analysis: 
+\begin{figure}[H]
+\includegraphics[width=0.60\columnwidth]{paper/figures/results/robot-team/pca-variance.png}
+\caption{Explained variance of PCA components for robot team dataset. A red horizontal line is superimposed on the plot indicating an explained variance of $1\%$. \label{fig:robot-team-pca}}
+\end{figure}  
+
+
 
 
 \section{Discussion}
