Updates from Overleaf

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -234,7 +234,7 @@ The mixing coefficients are initially chosen so that $\pi_k = \frac{1}{K}$.
 \subsection{Linear Mixing}
 
 \begin{figure}[H]
-\includegraphics[width=0.85\columnwidth]{paper/figures/results/usgs/fit-comparison.pdf}
+\includegraphics[width=\columnwidth]{paper/figures/results/usgs/fit-comparison.pdf}
 \caption{Comparison of GSM against NMF on simulated USGS dataset. \label{fig:usgs-fits}}
 \end{figure}  
 
